2000-07-12  Christopher James Lahey  <clahey@helixcode.com>

	* contact-editor/e-contact-editor.c: Add icons to the toolbars.

2000-07-12  Christopher James Lahey  <clahey@helixcode.com>

	* contact-editor/Makefile.am: Added installation of arrow.png.

	* contact-editor/e-contact-editor.c: Use EVOLUTIONDIR #define.

2000-07-11  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/addressbook.c: Removed an unused function

2000-07-10  Dan Winship  <danw@helixcode.com>

	* gui/component/select-names/Makefile.am (EXTRA_DIST): add idl
	file to EXTRA_DIST

2000-07-10  Ettore Perazzoli  <ettore@helixcode.com>

	* gui/component/addressbook.c (control_activate): Remove the
	SelectNames test.

2000-07-10  Peter Williams  <peterw@curious-george.helixcode.com>

	* gui/component/select-names/e-select-names-model.c: (Clahey's fix)
	Make multiple addresses be concatenated correctly.

2000-07-09  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/addressbook.c,
	gui/component/select-names/e-select-names.c,
	gui/component/select-names/e-select-names.h: Switched from ETable
	to ETableScrolled.

	* addressbook/gui/minicard/e-minicard.c: Don't display mailer or
	"name or org" fields.

2000-07-09  Christopher James Lahey  <clahey@helixcode.com>

	* backend/ebook/e-card-simple.c, backend/ebook/e-card-simple.h:
	Added a field that gives the name if it exists and the company
	name otherwise.

	* gui/component/e-addressbook-model.c: Formatting changes.

	* gui/component/select-names/e-select-names-table-model.c: Added
	stripping of names and display of company name if name doesn't
	exist.

	* gui/component/select-names/e-select-names.c: Fixed up the
	display so that we display both name and email address.

2000-07-09  Christopher James Lahey  <clahey@helixcode.com>

	* gui/component/select-names/e-select-names-model.c: Fixed a small
	off by one error that was causing an extra character to get
	deleted sometimes.

2000-07-09  Anders Carlsson  <andersca@gnu.org>
