@@ -426,8 +426,8 @@ search_entry_activated (GtkWidget* widget, gpointer user_data)
 
 	if (search_word && strlen (search_word))
 		search_query = g_strdup_printf (
-			"(contains \"full_name\" \"%s\")",
-			search_word);
+			"(or (contains \"full_name\" \"%s\") (contains \"org\" \"%s\"))",
+			search_word, search_word);
 	else
 		search_query = g_strdup (
 			"(contains \"full_name\" \"\")");
