@@ -46,6 +46,9 @@ gchar **e_strsplit (const gchar *string,
 		    const gchar *delimiter,
 		    gint         max_tokens);
 
+gchar *e_strstrcase (const gchar *haystack,
+		     const gchar *needle);
+
 void e_marshal_INT__INT_INT_POINTER (GtkObject * object,
 				     GtkSignalFunc func,
 				     gpointer func_data, GtkArg * args);
