@@ -1,3 +1,11 @@
+2000-07-12  Christopher James Lahey  <clahey@helixcode.com>
+
+	* camel-folder-search.c, providers/imap/camel-imap-store.c:
+	Changed from strstrcase to e_strstrcase.
+
+	* string-utils.c, string-utils.h: Removed strstrcase (in favor of
+	e_strstrcase in e-util/e-util.c.)
+
 2000-07-12  Chris Toshok  <toshok@helixcode.com>
 
 	* providers/nntp/camel-nntp-folder.c
