@@ -1,3 +1,7 @@
+2000-07-12  Christopher James Lahey  <clahey@helixcode.com>
+
+	* e-util.c, e-util.h: Added e_strstrcase function.
+
 2000-07-11  Christopher James Lahey  <clahey@helixcode.com>
 
 	* e-canvas-vbox.c: Removed some debugging printfs.
