@@ -1,5 +1,12 @@
 2000-07-12  Christopher James Lahey  <clahey@helixcode.com>
 
+	* backend/pas/pas-backend-file.c: Do case insensitive compares.
+
+	* addressbook/gui/component/addressbook.c: Make quick search
+	search both name and company name.
+
+2000-07-12  Christopher James Lahey  <clahey@helixcode.com>
+
 	* contact-editor/e-contact-editor.c: Add icons to the toolbars.
 
 2000-07-12  Christopher James Lahey  <clahey@helixcode.com>
